--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "laravel/framework": "^10.10",
         "laravel/octane": "^2.3",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "spiral/roadrunner-cli": "^2.6.0",
+        "spiral/roadrunner-http": "^3.3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
